--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: "jeffreytse/jekyll-theme-yat"
+- remote_theme: "jeffreytse/jekyll-theme-yat"
 
 - name: Jekyll Deploy Action
   uses: jeffreytse/jekyll-deploy-action@v0.1.4
